Correct poet name sizing on mobile

--- a/src/styles/poemlist.css
+++ b/src/styles/poemlist.css
@@ -72,6 +72,13 @@
   font-family: 'Open Sans';
   font-size: 3em;
   letter-spacing: 2px;
+  word-wrap: break-word;
+}
+
+@media (max-width: 400px) {
+  .poet-name {
+    font-size: 2.5em;
+  }
 }
 
 /* Poem List */
